	PR binutils/14481 	* aout-target.h (MY_close_and_cleanup): Make local function 	instead of alias of MY_bfd_free_cached_info.  Also call 	_bfd_generic_close_and_cleanup.